amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/interface-chain.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/interface-chain.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'baseField' required by interface 'BaseType' is missing in 'FirstChild'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/interface-chain.graphql#/declares/shape/FirstChild
  Property: http://www.w3.org/ns/shacl#property
  Range: [(9,0)-(11,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'firstChild' required by interface 'FirstChild' is missing in 'SecondChild'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/interface-chain.graphql#/declares/shape/SecondChild
  Property: http://www.w3.org/ns/shacl#property
  Range: [(13,0)-(15,1)]
  Location: 
